--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,11 @@ body {
 }
 
 .animate-slide {
-  animation: slide 30s linear infinite;
+  animation: slide 20s linear infinite;
 }
+
+.animate-slide:hover {
+  animation-play-state: paused;
+}
+
 
