--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,29 @@ body {
 }
 
 
+/* sidebar  */
+
+/* Hide scrollbar but keep scrolling */
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+
+/* main scroller remover  */
+
+/* Hide scrollbar for entire website */
+html, body {
+  overflow-y: auto; /* scroll to work */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
